--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
-#root {
-  color: red;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Share+Tech+Mono&display=swap");
+
+body {
+  background-color: rgb(46, 44, 44);
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10px 10px;
+}
+
+header {
+  background: linear-gradient(
+    to right,
+    rgb(204, 224, 224) 0%,
+    rgb(36, 39, 43) 100%
+  );
+  text-align: center;
+  background-color: #eaf2f5;
+  margin-bottom: 20px;
+  border: 2px solid #aaa;
+  border-radius: 10px;
+
+  font-family: "Share Tech Mono", monospace;
+  font-size: 24px;
+  line-height: 36px;
+  text-transform: uppercase;
+  text-shadow: 0 4px rgb(187, 184, 184), 0 5px rgb(77, 76, 76);
 }
